# mdner_llm

./: .gitignore  Makefile  README.md  Snakefile  annotations_summary.parquet  annotations_summary_with_metrics.parquet  config.yaml  pyproject.toml  ruff.toml  run_all_models.sh  ty.toml
annotations/annotations_v2/: figshare_10269416.json  figshare_10287393.json  figshare_11343020.json  figshare_1146536.json  figshare_11569377.json  figshare_11569452.json  figshare_11697906.json  figshare_11704443.json  figshare_11764158.json  figshare_11771604.json  figshare_11808396.json  figshare_11808522.json  figshare_12120159.json  figshare_12272015.json  figshare_12312368.json  figshare_12821617.json  figshare_12986024.json  figshare_13022698.json  figshare_13116890.json  figshare_13352375.json  figshare_13387534.json  figshare_13416098.json  figshare_14766557.json  figshare_14791452.json  figshare_14919822.json  figshare_15054454.json  figshare_1545562.json  figshare_16410502.json  figshare_16698491.json  figshare_16712908.json  figshare_17207477.json  figshare_17698630.json  figshare_18095690.json  figshare_19102457.json  figshare_19115904.json  figshare_19405967.json  figshare_19621175.json  figshare_19652739.json  figshare_19780550.json  figshare_19949518.json  (+132 more)
annotations/v2/: figshare_11356691.json  figshare_11475366.json  figshare_11688372.json  figshare_11808321.json  figshare_12046578.json  figshare_12064266.json  figshare_121241.json  figshare_12218135.json  figshare_12374771.json  figshare_12661589.json  figshare_12987701.json  figshare_13135976.json  figshare_13164486.json  figshare_13234529.json  figshare_13301090.json  figshare_13378605.json  figshare_13499346.json  figshare_13655516.json  figshare_1381865.json  figshare_13836577.json  figshare_14156828.json  figshare_14225919.json  figshare_14428978.json  figshare_14498668.json  figshare_14511885.json  figshare_14602641.json  figshare_14669430.json  figshare_14932766.json  figshare_14994624.json  figshare_15059757.json  figshare_1586671.json  figshare_16574000.json  figshare_16604601.json  figshare_16715821.json  figshare_16772812.json  figshare_17021821.json  figshare_17319679.json  figshare_17430576.json  figshare_19082291.json  figshare_19533246.json  (+177 more)
annotations/v3/: figshare_10150544.txt  figshare_1026131.txt  figshare_1026324.txt  figshare_10269416.json  figshare_10269416.txt  figshare_10281173.txt  figshare_10281206.txt  figshare_10287393.json  figshare_10287393.txt  figshare_1030363.txt  figshare_104603.txt  figshare_10656851.txt  figshare_1116279.txt  figshare_11336633.txt  figshare_11343020.json  figshare_11343020.txt  figshare_11356691.json  figshare_11356691.txt  figshare_11388111.txt  figshare_11445063.txt  figshare_1146536.json  figshare_1146536.txt  figshare_11475366.json  figshare_11475366.txt  figshare_1152682.txt  figshare_11569377.json  figshare_11569377.txt  figshare_11569452.json  figshare_11569452.txt  figshare_11688372.json  figshare_11688372.txt  figshare_11697906.json  figshare_11697906.txt  figshare_11704443.json  figshare_11704443.txt  figshare_11764158.json  figshare_11764158.txt  figshare_11771286.txt  figshare_11771604.json  figshare_11771604.txt  (+4015 more)
data/: entities.tsv  groundtruth_5_paths.txt  groundtruth_paths.txt
data/annotations/: figshare_10269416.json  figshare_10287393.json  figshare_11343020.json  figshare_11356691.json  figshare_1146536.json  figshare_11475366.json  figshare_11569377.json  figshare_11569452.json  figshare_11688372.json  figshare_11697906.json  figshare_11704443.json  figshare_11764158.json  figshare_11771604.json  figshare_11808321.json  figshare_11808396.json  figshare_11808522.json  figshare_11894358.json  figshare_11916468.json  figshare_12046578.json  figshare_12064266.json  figshare_12120159.json  figshare_121241.json  figshare_12168798.json  figshare_12218135.json  figshare_12272015.json  (+349 more)
docs/: annotation_rules.md  entities_config.yaml  ffm.yaml  md_ffm.md  md_software.md  minimal_annotation_rules.md  ner_few_shot_examples.md  normalization_rules.md  prompt_template.md  pydantic_models_mermaid.md  softname.yaml
llm_sandbox/: test_annotation_json_validation.ipynb  utils.py
models/: pydantic_output_models.py
notebooks/: README.md  annotate_text.ipynb  annotate_text_with_llm.ipynb  annotations_stats.ipynb  compare_models_performance.ipynb  correct_and_vizualize_annotations.ipynb  correct_annotations.ipynb  explore_entities_from_inventory.ipynb  fix_annotations.ipynb  qc_entity_inventory_explorer.ipynb  test_annotation_json_validation.ipynb  test_gliner2.ipynb  test_normalization.ipynb  test_provider_selection.ipynb  train_gliner2.ipynb  visualize_all_annotations_from_directory.ipynb  visualize_annotation_from_json.ipynb  visualize_annotations.ipynb  visualize_annotations_from_file.ipynb  visualize_entities_stats.ipynb  vizualiser.ipynb  vizualize_annotation_corrections.ipynb  vizualize_annotations_entities_stats.ipynb
old/: README _old.md  utils.py
prompt_templates/: few_shot.txt  zero_shot.txt
prompts/: json_few_shot.txt  json_with_positions_few_shot.txt  json_zero_shot.txt
results/: 100_selected_md_dataset_description_paths.txt  groundtruth_paths.txt  gt_annotations_entities_stats.csv  gt_annotations_tag_summary.csv
src/: confidence_scoring.py  count_entities.py  count_entities_per_class.py  evaluate_annotations.py  evaluate_json_annotations.py  extract_entities.py  extract_entities_all_texts.py  format_json_annotations.py  generate_plots_stats.py  pydantic_models.py  qc_entity_inventory.py  run_llm_annotation.py  run_qc_analysis.py  run_scoring_analysis.py  select_annotation_files.py  test.ipynb  utils.py
(+553 files in other folders)
