[project]
name = "mdner-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "groq>=0.29.0",
    "instructor>=1.11.3",
    "ipython==8.13.2",
    "jupyterlab>=4.4.4",
    "llama-index>=0.14.8",
    "llama-index-llms-openrouter>=0.4.2",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "openai>=1.93.2",
    "pandas>=2.2.3",
    "pydantic>=2.11.7",
    "pydantic-ai>=1.19.0",
    "python-dotenv>=1.1.1",
    "seaborn>=0.13.2",
    "spacy[lookups,transformers]>=3.8.7",
    "tqdm>=4.67.1",
    "watermark>=2.5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
]

[tool.ruff]
target-version = "py313"
line-length = 88  # Same as Black.

[tool.ruff.lint]
preview = true  # Allow preview rules.
extend-select = [
    "F",    # pyflakes
    "E",    # Pycodestyle errors
    "W",    # Pycodestle warnings
    "I",    # isort - import ordering
    "B",    # bugbear
    "C90",  # McCabe - code complexity metric for functions
    "N",    # PEP8 Naming
    "D",    # Pydocstyle - doctring formating
    "UP",   # Pyupgrade - upgraded syntax to newer Python versions
    "S",    # Flake8-bandit – security issues
    "BLE",  # Flake8-blind-except – flags bare excepts
    "FBT",  # Flake8-boolean-trap – potential pitfalls with booleans
    "A",    # Flake8-builtins – misuse of Python built-in names
    "COM",  # Flake8-commas – trailing/comma issues
    "C4",   # Flake8-comprehensions – best practices in comprehensions
    "EM",   # Flake8-errmsg – error message style
    "ICN",  # Flake8-import-conventions – enforces conventional import aliases
    "LOG",  # Flake8-logging – proper logging usage
    "G",    # Flake8-logging-format – logging format string issues
    "PT",   # Flake8-pytest-style – pytest best practices
    "Q",    # Flake8-quotes – enforces quote style consistency
    "SIM",  # Flake8-simplify – code simplification hints
    "PD",   # Pandas-vet – checks pandas-specific code practices
    "NPY",  # NumPy-specific rules – ensures NumPy coding standards
    "FAST", # FastAPI – FastAPI-specific linting rules
    "PERF", # Perflint – performance-related checks
    "FURB", # Refurb – rules for code refurbishment
    "DOC",  # Pydoclint – docstring linting and consistency
    "RUF",  # Ruff-specific rules – additional Ruff checks
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72

# Force numpy-style for docstrings
# https://docs.astral.sh/ruff/faq/#does-ruff-support-numpy-or-google-style-docstrings
[tool.ruff.lint.pydocstyle]
convention = "numpy"
