[project]
name = "mdner-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13"
dependencies = [
    "click>=8.3.0",
    "gliner2>=1.2.3",
    "groq>=0.29.0",
    "instructor>=1.11.3",
    "ipython==8.13.2",
    "jupyterlab>=4.4.4",
    "llama-index>=0.14.8",
    "llama-index-llms-openrouter>=0.4.2",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "openai>=1.93.2",
    "pandas>=2.2.3",
    "pydantic>=2.11.7",
    "pydantic-ai>=1.19.0",
    "python-dotenv>=1.1.1",
    "seaborn>=0.13.2",
    "spacy>=3.8.11",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "ty>=0.0.8",
    "watermark>=2.5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
]
